# stock-notebook

./: .env.example  .env.production  .gitignore  APPLICATION_CONTEXT.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  DOCKER_SETUP.md  HOW_TO_CONTRIBUTE__REACT.md  HOW_TO_CONTRIBUTE__RUST.md  Makefile  POSTMAN_API_DOCUMENTATION.md  PRODUCTION_CHECKLIST.md  QUICK_DEPLOY.md  README.md  TODO.md  deploy-digital-ocean.sh  deploy.sh  docker-compose.development.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  fix-cargo-lock-docker.sh
backend/: .dockerignore  .env  .env.example  .env.postgres.example  .env.production.template  API_LOGGING.md  AUTOCOMPLETE_API.md  Cargo.toml  Dockerfile  SEEDER_README.md  seed.sh  stocks.db  test_api.sh  test_api_debug.sh
backend/.sqlx/: query-02db837320a728d823073b863b40fab2d9a05648be57d3b5d07d685a5282b831.json  query-040984e40f7d36f6f3335bff74de6678ec5d533fd1b588591055708eac7acd47.json  query-32e4d99cb0c26fb4f983039c62078a1fb060ff6840efff1714ed7364b6931205.json  query-3c7ac2af5fc9f3f1ca7dc9ab089b8144c5773fbd5e7474168b302922d5c1851e.json  query-4058f1a2506c9d372fc66c9e2d6fe30cb062bd544b2f0b41668b849ab74b074c.json  query-4281418c041ae87fd7726dc94deb715905f3cf58442124a17f2e6ce2b001a22f.json  query-42e6c784c285cebf5db89cea8fe7bc2130943a1b05965cbd31cc488f1be4d16f.json  query-5b4dc9fa2a2e2f5d1f95d455c50d933171038a9f8186e2256b6cd54c165838fe.json  query-5bda73ea0b761bb6e329a078bf8b06c23e7321bed9eb27f5e6cfdb1ada390f16.json  query-607a6b1e55a25eaccddf2004bab76fdbd45376a9a4b1aa6866d58f5ac8f3815c.json  (+17 more)
backend/src/: lib.rs  (+7 more)
(+178 files in other folders)
