[package]
name = "stock-tracker-backend"
version = "0.1.0"
edition = "2021"
default-run = "stock-tracker-backend"

[[bin]]
name = "stock-tracker-backend"
path = "src/main.rs"

# [[bin]]
# name = "seeder"
# path = "src/bin/seeder.rs"

[lib]
name = "stock_tracker_backend"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
    "rust_decimal",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenvy = "0.15"
rust_decimal = { version = "1.32", features = ["serde"] }
thiserror = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
urlencoding = "2.1"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
